Bug 161452 Tree content and builder views may need to recheck empty status after children are removed based on patch by kyle yuan r=varga sr=bryner